Fix centre aligned homepage hero text

--- a/src/assets/scss/elements/_word-animation.scss
+++ b/src/assets/scss/elements/_word-animation.scss
@@ -1,6 +1,6 @@
 .word-animator {
   .word {
     display: inline-block;
-    white-space: pre;
+    white-space: pre-wrap;
   }
 }
